# Bot_Propstream_to_craimer

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  fromDB.py  pyproject.toml  run.py  tenants.yml  token.txt  z_run.py
.tokens/: clear_sky_builder.txt  palm_capital.txt  regional_investor.txt
bot/: api.py  config.py  crm_client.py  db_models.py  get_comps.py  jobs.py  logger.py  main.py  propstream_client.py  run_once.py  scheduler.py  tenants.py  token_manager.py
data/all_data/: properties_20251024_194925.json
received_data/: webhook_data.json
